subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_11.while
int f(int x) {
    {int f} rs = {f:y};
    return rs.f;
}
